--- a/src/pages/tutorial/index.mdx
+++ b/src/pages/tutorial/index.mdx
@@ -2,10 +2,11 @@
 layout: ../../layouts/TutorialLayout.astro
 title: Hacking a Platformer Game
 ---
+import Icon from '../../components/Icon.astro'
 
 # melonJS: Hacking a Platformer Game
 
-<img alt="Melon hacked clip art" src="/img/tutorial/melon-hack.svg" class="small"/>
+<Icon icon="melon-hack" class="small" alt="Melon hacked clip art"/>
 
 This tutorial will show you how to hack a pre-made platformer game (a platformer game is a side-scrolling game like mario) to add your own custom assets and code in. Taking it apart will help you learn how to make 2D games that run in the web browser using melonJS.
 
