--- a/src/pages/tutorial/part-3-1-modifying-the-art.mdx
+++ b/src/pages/tutorial/part-3-1-modifying-the-art.mdx
@@ -1,14 +1,16 @@
 ---
 layout: ../../layouts/TutorialLayout.astro
 ---
+import Icon from '../../components/Icon.astro'
+
 ## Part 3-1: Modifying the art
 VSCode is a code editor. This means it reads and writes text files (usually containing code but not always). This also means that it is not useful for editing images, which provide the art layer of your game. If you want to change how your game looks you'll need to edit your image files with an image editor like [Krita](https://krita.org/en/).
 
-<a href="https://krita.org/en/"><img class="krita" alt="Krita logo" src="/img/tutorial/krita-logo.png"></a>
+<a href="https://krita.org/en/"><img class="krita" alt="Krita logo" src="/img/tutorial/krita-logo.png"/></a>
 
 Other alternatives include Aseprite, Photoshop, GIMP, and more. Here's a basic chart of their features:
 
-<img alt="venn diagram of art software" class="medium" src="/img/tutorial/art-chart.svg">
+<Icon icon="art-chart" aria-label="venn diagram of art software" class="medium"/>
 
 Let's use Krita to change how the main character looks. Launch Krita, then in at the top click **File => Open**, then click open the following image:
 ```
