--- a/src/pages/game-design-creative-resources.mdx
+++ b/src/pages/game-design-creative-resources.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../layouts/TutorialLayout.astro
+layout: ../layouts/MDLayout.astro
 title: Understanding Game Design as a Creative process
 ---
 # Understanding Game Design as a Creative process
