add some inkscape resources

--- a/src/pages/learn-about-art.mdx
+++ b/src/pages/learn-about-art.mdx
@@ -2,7 +2,13 @@
 layout: ../layouts/MDLayout.astro
 ---
 
-# Resources for learning about Art
+# Resources for making SVG Art (aka vector art)
+Inkscape is an amazing tool for making vector art (like the animation at the beginning of the tutorial) however some people prefer Adobe Illustrator
+
+- [Logos by Nick makes great Inkscape tutorials](https://www.youtube.com/c/LogosByNick)
+- [44pes makes awesome game assets using Inkscape!](https://www.youtube.com/c/44pesGames/featured) 
+
+# Resources for learning about Art in General
 
 -   [Winged Canvas's YouTube Art Tutorials](https://www.youtube.com/c/Wingedcanvas/videos)
 -   [Reece Geofroy - How to Pixel Art](https://www.youtube.com/watch?v=0I_OZ4qQJfY)
