--- a/src/pages/learn-about-art.mdx
+++ b/src/pages/learn-about-art.mdx
@@ -2,8 +2,8 @@
 layout: ../layouts/MDLayout.astro
 ---
 
-# Resources for making SVG Art (aka vector art)
-Inkscape is an amazing tool for making vector art (like the animation at the beginning of the tutorial) however some people prefer Adobe Illustrator
+# Resources for making Vector Art (aka SVGs)
+[Inkscape](https://inkscape.org/) is an awesome free and open source tool for making vector art (like the animation at the beginning of the tutorial) however some people prefer [Adobe Illustrator](https://www.adobe.com/products/illustrator.html)
 
 - [Logos by Nick makes great Inkscape tutorials](https://www.youtube.com/c/LogosByNick)
 - [44pes makes awesome game assets using Inkscape!](https://www.youtube.com/c/44pesGames/featured) 
