continue work on the translations

--- a/translation/json/en.json
+++ b/translation/json/en.json
@@ -1,1 +1,1 @@
-{"fresh":"Fresh &amp; Lightweight"}
+{"fresh":"Fresh &amp; Lightweight","introPart1":"melonJS is an open source HTML5 game engine that empowers developers and designers to focus on content.","introPart2":"The framework provides a collection of composable entities and support for a number of third-party tools. Giving you a powerful combination that can be used wholesale or piecemeal."}
