--- a/translation/json/ja.json
+++ b/translation/json/ja.json
@@ -1,1 +1,1 @@
-{"fresh":"新登場 &amp; 軽い"}
+{"fresh":"新登場 &amp; 軽い","introPart1":"melonJS は、デベロッパーやデザイナーがコンテンツに集中できるようになる、オープンソースの HTML5 ゲームエンジンです。","introPart2":"このフレームワークは、構成可能なエンティティのコレクションを提供し、サードパーティが提供する数多くのツールにも対応しています。 大量に使うことも少しずつ使うこともでき、力強い組み合わせが可能になります。"}
