--- a/translation/json/zh.json
+++ b/translation/json/zh.json
@@ -1,1 +1,1 @@
-{"fresh":"全新&amp;轻量","introPart1":"melonJS是一项旨在帮助开发人员与设计人员专注于内容创造的开源HTML5游戏引擎。","introPart2":"本框架提供一系列实体，并支持多种 第三方工具。其所包含的各种强大工具能够让您便捷地进行整体或单独使用。"}
+{"introTitle":"全新&amp;轻量","introPart1":"melonJS是一项旨在帮助开发人员与设计人员专注于内容创造的开源HTML5游戏引擎。","introPart2":"本框架提供一系列实体，并支持多种 第三方工具。其所包含的各种强大工具能够让您便捷地进行整体或单独使用。"}
