add support for array mapping in translation script

--- a/translation/json/kr.json
+++ b/translation/json/kr.json
@@ -1,1 +1,1 @@
-{"introTitle":"신선하고 가벼운","introPart1":"melonJS는 개발자들과 디자이너가 내용에 집중할 수 있도록 해주는 오픈 소스 HTML5 게임 엔진입니다.","introPart2":"프레임웍은 많은 제3자 툴에 대한 지원과 컴포저블 엔티티의 컬렉션을 제공합니다. 전체로 또는 부분으로 사용될 수 있는 강력한 조합을 제공합니다.","benefitsSection":{"one":{"title":"빠르다"}}}
+{"intro":{"title":"신선하고 가벼운","part1":"melonJS는 개발자들과 디자이너가 내용에 집중할 수 있도록 해주는 오픈 소스 HTML5 게임 엔진입니다.","part2":"프레임웍은 많은 제3자 툴에 대한 지원과 컴포저블 엔티티의 컬렉션을 제공합니다. 전체로 또는 부분으로 사용될 수 있는 강력한 조합을 제공합니다."},"benefitsSection":[{"title":"빠르다"}]}
